--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -648,6 +648,18 @@ msgstr ""
 #empty strings from id 31156 to 31184
 #Widget Names 31185
 
+msgctxt "#31182"
+msgid "Random"
+msgstr ""
+
+msgctxt "#31183"
+msgid "Recent"
+msgstr ""
+
+msgctxt "#31184"
+msgid "Suggested"
+msgstr ""
+
 msgctxt "#31185"
 msgid "Random songs"
 msgstr ""
@@ -1363,14 +1375,6 @@ msgid "Use autocomplete on keyboards"
 msgstr ""
 
 #empty strings from id 31377 to 31379
-
-msgctxt "#31380"
-msgid "Enable playlist widget script"
-msgstr ""
-
-msgctxt "#31381"
-msgid "Configure script.randomandlastitems"
-msgstr ""
 
 msgctxt "#31382"
 msgid "Playlist widget should [B]randomize[/B] the playlist sort order"
@@ -2095,6 +2099,14 @@ msgstr ""
 
 msgctxt "#31982"
 msgid "Custom widgets limit amount"
+msgstr ""
+
+msgctxt "#31983"
+msgid "Configure service.skin.smartplaylist.widgets"
+msgstr ""
+
+msgctxt "#31984"
+msgid "Configure service.skin.smartplaylist.widgets"
 msgstr ""
 
 #empty strings from id 31983 to 31990
