Add service.skin.smartplaylist support

--- a/language/resource.language.fr_fr/strings.po
+++ b/language/resource.language.fr_fr/strings.po
@@ -608,53 +608,71 @@ msgctxt "#31155"
 msgid "Show global search button on bottom left"
 msgstr ""
 
+msgctxt "#31182"
+msgid "Random"
+msgstr "Aléatoires"
+
+msgctxt "#31183"
+msgid "Recent"
+msgstr "Récents"
+
+msgctxt "#31184"
+msgid "Suggested"
+msgstr "Recommandés"
+
+msgid "Random Songs"
+msgstr "Chansons Aléatoires"
+msgid "Random Artists"
+msgstr "Artistes Aléatoires"
+msgid "Recent Tracks"
+msgstr "Chansons Récentes"
 msgctxt "#31188"
-msgid "Random concerts"
-msgstr ""
+msgid "Random Concerts"
+msgstr "Concerts Aléatoires"
 
 msgctxt "#31189"
-msgid "Recent concerts"
-msgstr ""
+msgid "Recent Concerts"
+msgstr "Concerts Récents"
 
 msgctxt "#31190"
-msgid "Random albums"
-msgstr ""
+msgid "Random Albums"
+msgstr "Albums Aléatoires"
 
 msgctxt "#31191"
-msgid "Suggested albums"
-msgstr ""
+msgid "Suggested Albums"
+msgstr "Albums Recommandés"
 
 msgctxt "#31192"
-msgid "Recent albums"
-msgstr ""
+msgid "Recent Albums"
+msgstr "Albums Récentes"
 
 msgctxt "#31193"
-msgid "Random episodes"
-msgstr ""
+msgid "Random Episodes"
+msgstr "Episodes Aléatoires"
 
 msgctxt "#31194"
-msgid "Suggested episodes"
-msgstr ""
+msgid "Suggested Episodes"
+msgstr "Episodes Recommandés"
 
 msgctxt "#31195"
-msgid "Recent episodes"
-msgstr ""
+msgid "Recent Episodes"
+msgstr "Episodes Récents"
 
 msgctxt "#31196"
-msgid "Random movies"
-msgstr ""
+msgid "Random Movies"
+msgstr "Films Aléatoires"
 
 msgctxt "#31197"
-msgid "Suggested movies"
-msgstr ""
+msgid "Suggested Movies"
+msgstr "Films Recommandés"
 
 msgctxt "#31198"
-msgid "Recent movies"
-msgstr ""
+msgid "Recent Movies"
+msgstr "Films Récents"
 
 msgctxt "#31199"
-msgid "Suggested concerts"
-msgstr ""
+msgid "Suggested Concerts"
+msgstr "Concerts Recommandés"
 
 msgctxt "#31200"
 msgid "Shortcuts"
