--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+[B]17.1.0/B] [I]Dec 2016[/I]
+- Add service.skin.smartplaylist support
+
 [B]17.0.0/B] [I]Dec 2016[/I]
 - Upgrade to Helly skin.xonfluence 3.3.10
 
