--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -633,6 +633,18 @@ msgid "Show global search button on bottom left"
 msgstr ""
 
 #empty strings from id 31156 to 31187
+msgctxt "#31182"
+msgid "Random"
+msgstr ""
+
+msgctxt "#31183"
+msgid "Recent"
+msgstr ""
+
+msgctxt "#31184"
+msgid "Suggested"
+msgstr ""
+
 
 msgctxt "#31188"
 msgid "Random concerts"
@@ -1326,14 +1338,6 @@ msgstr ""
 
 #empty strings from id 31378 to 31379
 
-msgctxt "#31380"
-msgid "Enable playlist widget script"
-msgstr ""
-
-msgctxt "#31381"
-msgid "Configure script.randomandlastitems"
-msgstr ""
-
 msgctxt "#31382"
 msgid "Playlist widget should [B]randomize[/B] the playlist sort order"
 msgstr ""
@@ -2001,6 +2005,14 @@ msgstr ""
 
 msgctxt "#31982"
 msgid "Custom widgets limit amount"
+msgstr ""
+
+msgctxt "#31983"
+msgid "Configure service.skin.smartplaylist.widgets"
+msgstr ""
+
+msgctxt "#31984"
+msgid "Configure service.skin.smartplaylist.widgets"
 msgstr ""
 
 msgctxt "#31983"
