--- a/language/resource.language.fr_fr/strings.po
+++ b/language/resource.language.fr_fr/strings.po
@@ -620,58 +620,52 @@ msgctxt "#31184"
 msgid "Suggested"
 msgstr "Recommandés"
 
-msgid "Random Songs"
-msgstr "Chansons Aléatoires"
-msgid "Random Artists"
-msgstr "Artistes Aléatoires"
-msgid "Recent Tracks"
-msgstr "Chansons Récentes"
 msgctxt "#31188"
-msgid "Random Concerts"
+msgid "Random concerts"
 msgstr "Concerts Aléatoires"
 
 msgctxt "#31189"
-msgid "Recent Concerts"
+msgid "Recent concerts"
 msgstr "Concerts Récents"
 
 msgctxt "#31190"
-msgid "Random Albums"
+msgid "Random albums"
 msgstr "Albums Aléatoires"
 
 msgctxt "#31191"
-msgid "Suggested Albums"
+msgid "Suggested albums"
 msgstr "Albums Recommandés"
 
 msgctxt "#31192"
-msgid "Recent Albums"
+msgid "Recent albums"
 msgstr "Albums Récentes"
 
 msgctxt "#31193"
-msgid "Random Episodes"
+msgid "Random episodes"
 msgstr "Episodes Aléatoires"
 
 msgctxt "#31194"
-msgid "Suggested Episodes"
+msgid "Suggested episodes"
 msgstr "Episodes Recommandés"
 
 msgctxt "#31195"
-msgid "Recent Episodes"
+msgid "Recent episodes"
 msgstr "Episodes Récents"
 
 msgctxt "#31196"
-msgid "Random Movies"
+msgid "Random movies"
 msgstr "Films Aléatoires"
 
 msgctxt "#31197"
-msgid "Suggested Movies"
+msgid "Suggested movies"
 msgstr "Films Recommandés"
 
 msgctxt "#31198"
-msgid "Recent Movies"
+msgid "Recent movies"
 msgstr "Films Récents"
 
 msgctxt "#31199"
-msgid "Suggested Concerts"
+msgid "Suggested concerts"
 msgstr "Concerts Recommandés"
 
 msgctxt "#31200"
