--- a/language/resource.language.fr_fr/strings.po
+++ b/language/resource.language.fr_fr/strings.po
@@ -2238,3 +2238,17 @@ msgstr ""
 msgctxt "#32020"
 msgid "Same director"
 msgstr "Même réalisateur"
+
+#Addon service.skin.smartplaylist.widgets support
+
+msgctxt "#99001"
+msgid "Random"
+msgstr "Aléatoires"
+
+msgctxt "#99002"
+msgid "Recent"
+msgstr "Récents"
+
+msgctxt "#99003"
+msgid "Suggested"
+msgstr "Recommandés"
