--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+[B]21.1.0/B] [I]Oct 2024[/I]
+- Add service.skin.smartplaylist support
+
 [B]21.0.0/B] [I]Oct 2024[/I]
 - Upgrade to DarkZone-World skin.xonfluence 5 (https://github.com/DarkZone-World/skin.xonfluence)
 
