--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+[B]19.1.0/B] [I]Jan 2020[/I]
+- Add service.skin.smartplaylist support
+
 [B]19.0.0/B] [I]Oct 2022[/I]
 - Upgrade to Helly skin.xonfluence 4.1.1
 
