--- a/language/resource.language.en_gb/strings.po
+++ b/language/resource.language.en_gb/strings.po
@@ -2210,3 +2210,19 @@ msgstr ""
 msgctxt "#32011"
 msgid "Enable CPU temperature display"
 msgstr ""
+
+msgctxt "#99000"
+msgid "Configure service.skin.smartplaylist.widgets"
+msgstr ""
+
+msgctxt "#99001"
+msgid "Random"
+msgstr ""
+
+msgctxt "#99002"
+msgid "Recent"
+msgstr ""
+
+msgctxt "#99003"
+msgid "Suggested"
+msgstr ""
